--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
         "jobmetric/laravel-package-core": "^1.2",
         "spatie/laravel-query-builder": "^5.7"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^10.1"
+    },
     "autoload": {
         "files": [
             "src/helpers.php"
